--- a/index.html
+++ b/index.html
@@ -7,5 +7,97 @@
   </head>
   <body>
     <h1>nao</h1>
+    
+    <h2>About</h2>
+    <p>
+      還暦を超えた爺さんです
+    </p>
+
+    <h3>Profile</h3>
+    <ul>
+      <li>nao</li>
+      <li>新潟県</li>
+      <li>ソーシャルマーケティング</li>
+    </ul>
+
+    <h3>Skills</h3>
+    <table>
+      <tr>
+        <th>就職指導</th>
+        <td>就職室室長として15年の実績</td>
+      </tr>
+      <tr>
+        <th>ソーシャルマーケティング</th>
+        <td>地域活性化などゼミ主幹を歴任</td>
+      </tr>
+    </table>
+
+    <h3>Works</h3>
+    <p>ゼミで監修したコンテスト受賞作品</p>
+    <ul>
+      <li><a href="https://www.mlit.go.jp/mizukokudo/sewerage/content/001909986.pdf">国土交通大臣賞循環のみち下水道賞</a></li>
+      <li><a href="https://www.japanriver.or.jp/taisyo/oubo_jyusyou/jyusyou_katudou/no27/no27_pdf/bukai_2025.pdf">日本水大賞</a></li>
+      <li><a href="https://https://emira-t.jp/prototype/24961/">emiraビジコン</a></li>
+      <li>
+        作った作品
+        <ul>
+          <li><a href="https://example.com/">作品 1</a></li>
+          <li><a href="https://example.com/">作品 2</a></li>
+        </ul>
+      </li>
+    </ul>
+
+    <h3>Contact</h3>
+    <p>SNSなどアカウント</p>
+    <ul>
+      <li><a href="mailto:name@example.com">Mail</a></li>
+      <li><a href="https://twitter.com/n_yobikou">X(旧 Twitter)</a></li>
+      <li><a href="https://www.linkedin.com/">LinkedIn</a></li>
+    </ul>
+
+    <h3>History</h3>
+    <p>学歴・職歴など。</p>
+    <table>
+      <tr>
+        <th>2013 年</th>
+        <td><a href="https://dwango.co.jp/">事業創造大学院大学</a> 修士課程修了</td>
+      </tr>
+      <tr>
+        <th>2022 年</th>
+        <td>学校法人新潟総合学院 <a href="https://nnn.ed.jp/">新潟法律大学校</a> 転属</td>
+      </tr>
+      <tr>
+        <th>2020 年</th>
+        <td>ヤマトグループ総合研究所主催　懸賞論文最優秀賞　監修</td>
+      </tr>
+      <tr>
+        <th>2022 年</th>
+        <td>東京大学公共政策大学院各研究室主催　チャレンジオープンガバナンス2022連携体制賞　監修</td>
+      </tr>
+       <tr>
+        <th>2023 年</th>
+        <td>東京大学公共政策大学院各研究室主催　チャレンジオープンガバナンス2023学生賞　監修</td>
+      </tr>
+       <tr>
+        <th>2023 年</th>
+        <td>国土交通省主催　国土交通大臣賞循環のみち下水道賞　教育広報部門</td>
+      </tr>
+       <tr>
+        <th>2024 年</th>
+        <td>日本下水道協会主催　GKP広報大賞　準グランプリ</td>
+      </tr>
+       <tr>
+        <th>2024 年</th>
+        <td>早稲田大学PEP・emira編集委員会主催　emiraビジコン2025最優秀賞　監修</td>
+      </tr>
+      <tr>
+        <th>2025 年</th>
+        <td>国土交通省主催　国土交通大臣賞循環のみち下水道賞　教育広報部門</td>
+      </tr>
+       <tr>
+        <th>2025 年</th>
+        <td>日本水大賞委員会・国土交通省主催　日本水大賞審査部会特別賞　監修</td>
+      </tr>
+    </table>
   </body>
 </html>
