--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
     <table>
       <tr>
         <th>2013 年</th>
-        <td><a href="https://dwango.co.jp/">事業創造大学院大学</a> 修士課程修了</td>
+        <td><a href="https://www.jigyo.ac.jp/">事業創造大学院大学</a> 修士課程修了</td>
       </tr>
       <tr>
         <th>2022 年</th>
-        <td>学校法人新潟総合学院 <a href="https://nnn.ed.jp/">新潟法律大学校</a> 転属</td>
+        <td>学校法人新潟総合学院 <a href="https://nleed.jp/">新潟法律大学校教務部</a> 転属</td>
       </tr>
       <tr>
         <th>2020 年</th>
