--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>nao</h1>
-    <img src="PC160010.jpg">
+    <img src="PC160010.JPG">
     
     <h2>About</h2>
     <p>
