--- a/index.html
+++ b/index.html
@@ -101,5 +101,8 @@
         <td>日本水大賞委員会・国土交通省主催　日本水大賞審査部会特別賞　監修</td>
       </tr>
     </table>
+
+    <h3>チャレンジオープンガバナンス2022のプレゼン</h3>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/tRSHc0OPIec?si=7Kg82xMxKMgUkf_y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </body>
 </html>
