--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
       <li>
         作った作品
         <ul>
-          <li><a href="https://example.com/">作品 1</a></li>
-          <li><a href="https://example.com/">作品 2</a></li>
+          <li>作品はまだありません 2</a></li>
         </ul>
       </li>
     </ul>
