--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <li>
         作った作品
         <ul>
-          <li>作品はまだありません 2</a></li>
+          <li>作品はまだありません</a></li>
         </ul>
       </li>
     </ul>
