--- a/index.html
+++ b/index.html
@@ -51,9 +51,8 @@
     <h3>Contact</h3>
     <p>SNSなどアカウント</p>
     <ul>
-      <li><a href="mailto:name@example.com">Mail</a></li>
-      <li><a href="https://twitter.com/n_yobikou">X(旧 Twitter)</a></li>
-      <li><a href="https://www.linkedin.com/">LinkedIn</a></li>
+      <li><a href="https://note.com/naotan2002">note</a></li>
+      <li><a href="https://www.instagram.com/naotan2002/">Instagram</a></li>
     </ul>
 
     <h3>History</h3>
