--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+nnha <!DOCTYPE html>
 <html lang="ja">
   <head>
     <meta charset="utf-8">
@@ -19,7 +19,7 @@
     <ul>
       <li>nao</li>
       <li>新潟県</li>
-      <li>ソーシャルマーケティング</li>
+      <li>専門はマーケティングです</li>
     </ul>
 
     <h3>Skills</h3>
