--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       </tr>
        <tr>
         <th>2025 年</th>
-        <td>日本水大賞委員会・国土交通省主催　日本水大賞審査部会特別賞　監修</td>
+        <td>日本水大賞委員会・国土交通省主催　日本水大賞審査部会特別賞</td>
       </tr>
     </table>
 
