--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <ul>
       <li><a href="https://www.mlit.go.jp/mizukokudo/sewerage/content/001909986.pdf">国土交通大臣賞循環のみち下水道賞</a></li>
       <li><a href="https://www.japanriver.or.jp/taisyo/oubo_jyusyou/jyusyou_katudou/no27/no27_pdf/bukai_2025.pdf">日本水大賞</a></li>
-      <li><a href="https://https://emira-t.jp/prototype/24961/">emiraビジコン</a></li>
+      <li><a href="https://emira-t.jp/prototype/24961/">emiraビジコン</a></li>
       <li>
         作った作品
         <ul>
